AFS_Dev/src/objects/SG_Split_Attribute_Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>Used for mapping of attributes during SG Conversion</description>
    <fields>
        <fullName>Attribute_Value_Origin__c</fullName>
        <label>Attribute Value Origin</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Attribute_Offering_1__c</fullName>
        <label>Child Attribute Offering 1</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Attribute_Offering_2__c</fullName>
        <label>Child Attribute Offering 2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Attribute_Value_1__c</fullName>
        <label>Child Attribute Value 1</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Attribute_Value_2__c</fullName>
        <label>Child Attribute Value 2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SG_Origin__c</fullName>
        <label>SG Origin</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>SG Split Attribute Mapping</label>
</CustomObject>